--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,10 @@ Authors@R:
              email = "ForestGEO@si.edu"))
 Description: A helper for installing fgeo.
 License: GPL-3
-Encoding: UTF-8
-LazyData: true
+Depends: 
+    R (>= 3.2)
 Suggests: 
     testthat
+Encoding: UTF-8
+LazyData: true
 RoxygenNote: 6.1.1
