--- a/tests/testthat/toy1/DESCRIPTION
+++ b/tests/testthat/toy1/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: fgeo.install
-Title: A Helper For Installing fgeo
+Package: toy1
+Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
     c(person(given = "Mauro",
@@ -9,18 +9,7 @@ Authors@R:
       person(given = "CTFS-ForestGEO",
              role = "cph",
              email = "ForestGEO@si.edu"))
-Description: A helper for installing fgeo.
+Description: What the package does (one paragraph).
 License: GPL-3
-Depends: 
-    R (>= 3.2)
-Suggests: 
-    testthat
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
-Imports: 
-    devtools,
-    fs,
-    usethis,
-    glue,
-    rlang
