--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,15 @@ export(build_github)
 export(build_local)
 export(download_github_zip)
 export(install_fgeo)
+importFrom(fs,dir_create)
+importFrom(fs,dir_delete)
+importFrom(fs,dir_exists)
+importFrom(fs,dir_ls)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_lgl)
+importFrom(purrr,walk)
+importFrom(purrr,walk2)
 importFrom(rlang,"%||%")
+importFrom(rlang,abort)
