--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,3 +17,5 @@ importFrom(purrr,walk)
 importFrom(purrr,walk2)
 importFrom(rlang,"%||%")
 importFrom(rlang,abort)
+importFrom(rlang,inform)
+importFrom(rlang,warn)
