--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,8 @@ Imports:
     purrr,
     fgeo (>= 0.0.0.9002),
     stringr,
-    pkgbuild
-Remotes:  
+    pkgbuild,
+    tibble,
+    tidyr
+Remotes: 
     forestgeo/fgeo
