--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(check_built_packages)
 export(download_github_zip)
 export(install_fgeo)
 export(prefix)
+export(schedule)
 export(update_fgeo_source)
 importFrom(fs,dir_create)
 importFrom(fs,dir_delete)
