--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(check_built_packages)
 export(dependencies)
 export(dependencies_ls)
 export(download_github_zip)
-export(install_fgeo)
+export(fgeo_install)
 export(prefix)
 export(schedule)
 export(update_fgeo_source)
