--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,16 @@ export(dependencies)
 export(dependencies_ls)
 export(download_github_zip)
 export(fgeo_install)
+export(guide_installation)
+export(install_fgeo)
 export(prefix)
 export(schedule)
 export(update_fgeo_source)
+importFrom(crayon,cyan)
+importFrom(crayon,green)
+importFrom(crayon,magenta)
+importFrom(crayon,red)
+importFrom(crayon,silver)
 importFrom(fs,dir_create)
 importFrom(fs,dir_delete)
 importFrom(fs,dir_exists)
