Include dependencies of fgeo itself.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(check_built_packages)
 export(dependencies)
 export(dependencies_ls)
 export(download_github_zip)
+export(fgeo_deps)
 export(fgeo_install)
 export(guide_installation)
 export(install_fgeo)
