Address R CMD check and update fgeo source.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Imports:
     tidyr,
     magrittr,
     crayon,
-    cli
+    cli,
+    dplyr
 Remotes: 
     forestgeo/fgeo
 Roxygen: list(markdown = TRUE)
