--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,10 @@ export(dependencies)
 export(dependencies_ls)
 export(download_github_zip)
 export(fgeo_deps)
-export(fgeo_install)
+export(fgeo_source)
 export(guide_installation)
 export(install_fgeo)
+export(path_source)
 export(prefix)
 export(schedule)
 export(update_fgeo_source)
