--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,20 +15,9 @@ Depends:
     R (>= 3.2)
 Imports: 
     crayon,
-    devtools,
-    fgeo,
-    fs,
-    glue,
-    magrittr,
-    pkgbuild,
-    purrr,
-    stringr,
-    tibble,
-    tidyr
+    stringr
 Suggests: 
     testthat
-Remotes: 
-    forestgeo/fgeo
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
