No longer depend on stringr.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,12 @@
 
 export(dependencies)
 export(dependencies_ls)
+export(fgeo)
 export(fgeo_deps)
 export(fgeo_source)
 export(guide_installation)
 export(install_fgeo)
 export(path_source)
-export(prefix)
-export(schedule)
 importFrom(crayon,cyan)
 importFrom(crayon,green)
 importFrom(crayon,magenta)
