--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,9 @@
 export(dependencies)
 export(dependencies_ls)
 export(fgeo)
-export(fgeo_source)
 export(guide_installation)
+export(install_dependencies)
 export(install_fgeo)
-export(path_source)
 importFrom(crayon,cyan)
 importFrom(crayon,green)
 importFrom(crayon,magenta)
