--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dependencies_ls)
 export(guide_installation)
 export(install_dependencies)
 export(install_fgeo)
+importFrom(crayon,bold)
 importFrom(crayon,cyan)
 importFrom(crayon,green)
 importFrom(crayon,magenta)
