--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,15 @@ Authors@R:
              email = "ForestGEO@si.edu"))
 Description: A helper for installing fgeo.
 License: GPL-3
+URL: https://github.com/forestgeo/fgeo.install
+BugReports: https://github.com/forestgeo/fgeo.install/issues
 Depends: 
     R (>= 3.2)
 Imports: 
     crayon
 Suggests: 
-    testthat
+    testthat,
+    covr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
