Acknowledge reviewers: @ValentineHerr, @gonzalezeb, @ekraichak.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,18 @@ Authors@R:
              family = "Lepore",
              role = c("aut", "ctr", "cre"),
              email = "leporem@si.edu"),
+      person(given = "Bier",
+             family = "Ekaphan Kraichak",
+             role = c("rev"),
+             email = "ekaphan.k@ku.th"),
+      person(given = "Erika",
+             family = "Gonzalez-Akre",
+             role = c("rev"),
+             email = "GonzalezEB@si.edu@si.edu"),
+      person(given = "Valentine",
+             family = "Herrmann",
+             role = c("rev"),
+             email = "HerrmannV@si.edu"),
       person(given = "CTFS-ForestGEO",
              role = "cph",
              email = "ForestGEO@si.edu"))
